# semantic_RAG

./: .env.example  .gitignore  README.md  config.py  gunicorn.conf.py  html_sectioning.py  index.html  ingest.py  main.py  pyproject.toml  requirements.txt  run_production.sh
app/: __init__.py  embedder.py  llm.py  logger.py  retriever.py  routes.py  session.py  tasks.py
deploy/: DEPLOY.md  DEPLOY_NO_NGINX.md  FINAL_DEPLOY_NO_UV_NO_SUDO.md  README_404_TROUBLESHOOTING.md  celery.service.example  gunicorn.service.example  nginx.conf.example  test-DEPLOY.md
input/: climate_academy.html  sample_ca_book.html
static/: index.html
