[project]
name = "climate-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.3",
    "chromadb>=1.5.9",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gevent>=26.4.0",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "ollama>=0.6.2",
    "redis>=7.4.0",
    "sentence-transformers>=5.4.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]
